--- a/web_app/style.css
+++ b/web_app/style.css
@@ -2,7 +2,7 @@ html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0px;
+  overflow: hidden;
 }
 
 * {
@@ -11,7 +11,6 @@ body {
 }
 
 canvas {
-  
   display: block;
 }
 
