--- a/web_app/style.css
+++ b/web_app/style.css
@@ -10,10 +10,62 @@ body {
   padding: 0;
 }
 
-canvas {
-  display: block;
-}
-
 body {
   background-color: rgb(155, 155, 155);
+}
+
+.noteLabel {
+  font-family: Arial, Helvetica, sans-serif;
+  text-shadow: white;
+  color: black;
+  display: inline-block;
+  width: 20px;
+}
+
+#arrow-left, #arrow-right {
+  font-size: 55px;
+  display: none;
+}
+
+.container {
+  position: fixed;
+  left: 0;
+  padding-top: 50px;
+}
+
+#btnContainer {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  height: 200px;
+  width: 200px;
+}
+
+input {
+  transform: rotate(-30deg);
+  border: none;
+  margin: 5px;
+  width: 50px;
+}
+
+.toggleButton {
+  text-align: center;
+  height: 80px;
+  width: 80px;
+  border: none;
+  border-radius: 100px;
+  background-color: rgb(228, 228, 228);
+  cursor: pointer;
+  color: rgb(155, 155, 155);
+}
+
+.sidebar {
+  text-align: center;
+  border: none;
+  display: none;
+  border-radius: 5px 50px 50px 5px;
+  vertical-align: middle;
+  height: 300px;
+  background-color: rgb(228, 228, 228);
+  width: 250px;
 }
