--- a/web_app/style.css
+++ b/web_app/style.css
@@ -22,7 +22,8 @@ body {
   width: 20px;
 }
 
-#arrow-left, #arrow-right {
+#arrow-left,
+#arrow-right {
   font-size: 55px;
   display: none;
 }
@@ -67,5 +68,58 @@ input {
   vertical-align: middle;
   height: 300px;
   background-color: rgb(228, 228, 228);
-  width: 250px;
+  width: 200px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #4BD763;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #4BD763;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
 }
