--- a/electron_webapp/public/style.css
+++ b/electron_webapp/public/style.css
@@ -10,9 +10,17 @@ body {
   padding: 0;
 }
 
+
 body {
   background-color: rgb(155, 155, 155);
+  
 }
+
+canvas{
+  cursor: grab;
+  cursor: -webkit-grab;
+}
+
 
 .noteLabel {
   font-family: Arial, Helvetica, sans-serif;
@@ -123,3 +131,4 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
